Address 177 persona-based gaps across 12 engineering roles
New documents (15):
- 06-developer-guides/10-local-development.md (clone-to-running, seeding, first PR)
- 05-operational-excellence/09-debugging-guide.md (local/staging debug, log search, traces)
- 02-architecture-and-api/09-error-catalog.md (error registry, exception handling, error boundaries)
- 03-engineering-practices/09-spring-boot-standards.md (logging, config, health checks, LD SDK, virtual threads, versioning)
- 03-engineering-practices/10-frontend-ci-cd.md (frontend golden path, monorepo, preview envs, mobile CI)
- 03-engineering-practices/11-qa-standards.md (QA org model, test data, bug triage, device matrix)
- 04-infrastructure-and-cloud/10-security-operations.md (threat modeling, CVE triage, SIEM, pen testing, SBOM, bug bounty, PAM)
- 07-ways-of-working/09-engineering-management.md (reviews, 1:1s, team health, headcount, career dev, RACI)
- 07-ways-of-working/10-product-operations.md (roadmap, OKRs, user stories, launch mgmt, feedback)
- 09-mobile-and-frontend/03-react-native-guide.md (Turbo Modules, navigation, Hermes, CodePush, versioning)
- 09-mobile-and-frontend/04-android-standards.md (Gradle, Compose, Kotlin, Hilt, WorkManager)
- 09-mobile-and-frontend/05-ios-standards.md (SwiftUI, SPM, privacy manifest, extensions, dSYM)
- 09-mobile-and-frontend/06-design-system.md (handoff, governance, tokens, motion, dark mode, data viz)
- GLOSSARY.md (46 terms with definitions and doc links)
- ONBOARDING.md (Day 1 guide, access requests, minimum viable manifesto, week 1-4 milestones)

Major expansions (22 files):
- Tech stack: Caffeine cache, web auth patterns, offline storage fix, coordinate format fix
- API standards: internal auth, API host consistency
- Event schema: field removal explicitly breaking
- Kafka patterns: topic creation workflow, DLQ replay procedure
- gRPC: proto repo clarified as monorepo-only
- Testing: ArchUnit fix, shared test fixtures, gRPC/Kafka mocking
- CI: DAST, Terraform drif